# MicroAI-Paygate

./: .env.example  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  RULES.md
.github/workflows/: e2e.yml  go-lint.yml  go-tests.yml  pr-branch-check.yml  rust-lint.yml  rust-tests.yml  web-lint-build.yml
gateway/: Dockerfile  cache.go  cache_integration_test.go  config_test.go  go.mod  go.sum  gzip_test.go  main.go  main_test.go  middleware.go  openapi.yaml  ratelimit.go  receipt_test.go  timeout_extra_test.go  timeout_test.go
src/: config.ts
src/middleware/: x402.ts
src/services/: payment.ts
tests/: e2e.test.ts
verifier/: Cargo.toml  Dockerfile  README.md
verifier/src/: main.rs
web/: Dockerfile  package-lock.json  package.json
web/src/app/: page.tsx
