[package]
name = "verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
hex = "0.4"
tower = "0.5" # Changed from 0.4 to 0.5
tower-http = { version = "0.6", features = ["limit"] } # Changed from 0.5 to 0.6